# djserver

./: .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt  test.http
analytics/: admin.py  middleware.py  models.py
analytics/migrations/: 0001_initial.py
consts/: statuscodes.py
xauth/: admin.py  models.py  tests.py  urls.py  views.py
xauth/migrations/: 0001_initial.py
xblogs/: apps.py  models.py  urls.py  views.py
xblogs/migrations/: 0001_initial.py  0002_readrecord_delete_visitrecord.py  0003_readrecord_unlogined.py
xnors/: asgi.py  settings.py  urls.py  wsgi.py
